--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -1,4 +1,4 @@
-<div class="ranking-container">
+<div class="ranking-container" *ngIf="!showMonitoringView">
   <h2 class="ranking-title">🏆 Ranking de Cobertura QA</h2>
   
   @if (loading) {
